Renaming to CityVehicleSpec

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="CityJSON specification for public transit data (stops, routes, timetables, etc) and mobility data (personal or shared scooters, bikes, cars, etc)">
+    <meta name="description" content="CityVehicleSpec is the specification for public transit data (stops, routes, timetables, etc) and mobility data (personal or shared scooters, bikes, cars, etc)">
     <meta name="keywords" content="public transit, mobility data, format, specification, bus, train, timetables, car, scooter, sharing, GTFS, GBFS">
 
     {%- seo -%}
